// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`docs topic direct skill view matches the current output 1`] = `
"## Workflow Agent
/fixture/repo/docs/topics/platform/workflow-agent/SKILL.md

Run the current workflow against a local test environment.

### /fixture/repo/docs/topics/platform/workflow-agent/references/:
- checklist.md
- troubleshooting.md
"
`;

exports[`docs topic focused nested path matches the current output 1`] = `
"## pattern-library

source: /fixture/repo/docs/topics/platform/pattern-library
Use this subtree before falling back to broader references.

### Pattern Library Usage
path: /fixture/repo/docs/topics/platform/pattern-library/usage.md
Start here before opening deeper sections in the subtree.

### skills
path: /fixture/repo/docs/topics/platform/pattern-library/skills/
#### Content Cards Review
/fixture/repo/docs/topics/platform/pattern-library/skills/content-cards/SKILL.md

Review content card structures and their supporting references.

### /fixture/repo/docs/topics/platform/pattern-library/skills/content-cards/references/:
- checklist.md
- examples.md

### website
path: /fixture/repo/docs/topics/platform/pattern-library/website/
#### app
path: /fixture/repo/docs/topics/platform/pattern-library/website/app/
##### topics
path: /fixture/repo/docs/topics/platform/pattern-library/website/app/topics/
###### [slug]
path: /fixture/repo/docs/topics/platform/pattern-library/website/app/topics/[slug]/
[no section entries found]

#### components
path: /fixture/repo/docs/topics/platform/pattern-library/website/components/
##### ui
path: /fixture/repo/docs/topics/platform/pattern-library/website/components/ui/
[no section entries found]
"
`;

exports[`docs topic focused path matches the current output 1`] = `
"## guides

source: /fixture/repo/docs/topics/platform/docs/guides
Use local workflows first.
Read when: Need guided simulator setup.

### Session Guide
path: /fixture/repo/docs/topics/platform/docs/guides/session.md
Prepare the local workspace before using the topic tooling.

source: /fixture/home/.ngents/docs/topics/platform/docs/guides
Shared machine conventions.

### Shared Guide
path: /fixture/home/.ngents/docs/topics/platform/docs/guides/shared.md
Shared workspace guidance.
"
`;

exports[`docs topic index matches the current output 1`] = `
"Usage: docs topic [topic] [path]

## Topics

TOPIC     TITLE             DESCRIPTION
platform  Platform Library  platform docs
ops       Ops Notes         This summary is intentionally longer than sixty-four characte...

docs topic foo - view foo about/index first
docs topic foo bar/baz - focus one path inside the topic
"
`;

exports[`docs topic overview matches the current output 1`] = `
"Use \`docs topic platform <path>\` to focus one path inside the topic.

Shared machine-level platform context.
Read when: Need reusable machine docs.

# Topic: Platform Library

## Docs

### /fixture/repo/docs/topics/platform
- overview.md - entry point

### /fixture/repo/docs/topics/platform/docs/guides
- session.md - local workspace setup

### /fixture/home/.ngents/docs/topics/platform
- overview.md - Global overview notes.

### /fixture/home/.ngents/docs/topics/platform/docs/guides
- shared.md - Shared workspace guidance.

## Skills

### pattern-library
Path: /fixture/repo/docs/topics/platform/pattern-library/

$content-cards

### workflow-agent
Path: /fixture/repo/docs/topics/platform/workflow-agent/SKILL.md

Workflow skill.

$workflow-agent - Workflow-first checks.
"
`;

exports[`docs topic parked collection browser matches the current output 1`] = `
"# Topics: machine

TOPIC     TITLE             DESCRIPTION
platform  Platform Library  platform docs
ops       Ops Notes         This summary is intentionally longer than sixty-four characte...
"
`;
